working neo4j build